# teleportdog

./: .gitignore  LICENSE  README.md  dev-prepare.sh  pyproject.toml  requirements.txt  run-demo.sh
.github/: copilot-instructions.md
.github/skills/adventure/: SKILL.md
docs/: CORPUS_EXPANSION.md  DEVELOPER_CONSTRAINTS.md
examples/adventure/: adventure-map.json  adventure.py
teleportdog/: __init__.py  chat.py  cli.py  lm.py  t9.py
teleportdog/data/: bootstrap_corpus.txt
