[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleportdog"
version = "0.1.0"
description = "Offline tiny chat CLI with T9-assisted input and a local character model"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "teleportdog"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
teleportdog = "teleportdog.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
teleportdog = ["data/*.txt"]
